--- a/submission.mkd
+++ b/submission.mkd
@@ -315,7 +315,7 @@ contamination.
 As expected, passing the `-­help` option to `plot-bins` gives a
 help message describing the various flags supported by the tool.
 
-![Bin timeseries showing roughly 640 seconds of the donor-only experiment\label{fig:plot-bins}.](example/plot-bins.pdf)
+![Bin timeseries showing roughly two minutes of the donor-only dataset\label{fig:plot-bins}.](example/plot-bins.pdf)
 
 ### Correlation analysis
 
@@ -349,17 +349,38 @@ optics has not changed as the day progressed.
 
 Have verified that the sample is clear and contains the expected
 sample, we can now extract a FRET efficiency. We begin by examining
-the donor-only sample,
+the donor-only sample, fitting the resulting FRET distribution to a
+single Beta distribution with 5 ms bin width, and a burst acceptance
+threshold of 10 photons,
 
-    $ fret-analysis --fit-comps=1 donor.timetag
-    
-* donor-only, donor acceptor data
-* compute correlation function
-* fit correlation function, compare against physics
-* examine donor-only sample for crosstalk
-* examine donor-acceptor sample without corrections
-* examine donor-acceptor sample correcting for background, crosstalk, and gamma
-  
+    $ fret-analysis --fit-comps=1 --bin-width=5e-3 --burst-size=10 --nbins=10 donor.timetag
+
+This produces a few tab-separated files describing the
+above-threshold bins, a variety of plots, as well as an HTML file
+summarizing the analysis. We see in the summary that the donor-only
+sample contains a single population exhibiting low FRET
+efficiency. Despite there being nominally no acceptor emissions (as
+there is no acceptor dye), the peak is shifted away from $E=0$ due to
+spectral crosstalk. The magnitude of this shift can be later used to
+correct the histogram FRET dataset.
+
+Next we can examine the doubly-labelled FRET sample. Here we will use
+two fit components (one for the donor-only population and another for
+the doubly-labelled population) and a higher threshold due to the
+second dye. Further, we can indicate that the software should correct
+for crosstalk and gamma, inferring the correction parameters from the
+donor-only dataset,
+
+    $ fret-analysis --fit-comps=2 --burst-size=20 --nbins=20 --donly-file=donor.timetag --crosstalk=auto --gamma=auto --bin-width=5e-3 fret.timetag
+
+We see in the FRET histogram that not only has the tool inferred a fit
+for the FRET distribution, it has also plotted a variant of the fit
+showing the distribution that would be expected in the case of a
+shot-noise limited FRET population exhibiting no slow dynamics.
+
+## Conclusion
+
+
 ## Acknowledgements
 
 This work was supported by NSF-MCB grant \#0920139.
